[gd_scene load_steps=10 format=3 uid="uid://dhguxfqqurpyb"]

[ext_resource type="Script" path="res://scripts/customer_button.gd" id="1_m2x0k"]
[ext_resource type="Script" path="res://scripts/customer.gd" id="1_rovlt"]
[ext_resource type="Texture2D" uid="uid://chufwn1w4psc3" path="res://placeholder_art/PatienceBarBlack.png" id="3_ii5k2"]
[ext_resource type="Texture2D" uid="uid://dyktve25xmkxg" path="res://placeholder_art/PatienceBarRed.png" id="4_8jrjm"]
[ext_resource type="Texture2D" uid="uid://c4t46sm5fwvky" path="res://art/customers/Demon.png" id="4_frltw"]
[ext_resource type="Texture2D" uid="uid://dor5ptyvfxrbl" path="res://placeholder_art/PatienceBarGreen.png" id="4_if1ix"]
[ext_resource type="Texture2D" uid="uid://dqkhmo51pfv3e" path="res://placeholder_art/Checkmark.png" id="7_2eesi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2b33s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b204h"]
size = Vector2(64, 128)

[node name="Customer" type="CharacterBody2D"]
script = ExtResource("1_rovlt")

[node name="CustomerButton" type="Button" parent="."]
offset_left = -32.0
offset_top = -118.0
offset_right = 32.0
offset_bottom = 10.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_2b33s")
script = ExtResource("1_m2x0k")

[node name="RedPatienceBar" type="TextureProgressBar" parent="CustomerButton"]
visible = false
layout_mode = 0
offset_top = 131.0
offset_right = 32.0
offset_bottom = 139.0
scale = Vector2(2, 2)
value = 100.0
texture_under = ExtResource("3_ii5k2")
texture_progress = ExtResource("4_8jrjm")

[node name="GreenPatienceBar" type="TextureProgressBar" parent="CustomerButton"]
visible = false
layout_mode = 0
offset_top = 131.0
offset_right = 32.0
offset_bottom = 139.0
scale = Vector2(2, 2)
value = 100.0
texture_progress = ExtResource("4_if1ix")

[node name="RedPatienceTimer" type="Timer" parent="CustomerButton"]
one_shot = true

[node name="GreenPatienceTimer" type="Timer" parent="CustomerButton"]
one_shot = true

[node name="Panel" type="Panel" parent="CustomerButton"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.062
anchor_top = -0.023
anchor_right = -0.062
anchor_bottom = -0.023
offset_left = -0.0319998
offset_top = -72.056
offset_right = 71.968
offset_bottom = -0.0559998

[node name="ItemGrid" type="GridContainer" parent="CustomerButton/Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 70.0
offset_bottom = 70.0
columns = 2

[node name="Slot1" type="TextureRect" parent="CustomerButton/Panel/ItemGrid"]
layout_mode = 2

[node name="Slot2" type="TextureRect" parent="CustomerButton/Panel/ItemGrid"]
layout_mode = 2

[node name="Slot3" type="TextureRect" parent="CustomerButton/Panel/ItemGrid"]
layout_mode = 2

[node name="Slot4" type="TextureRect" parent="CustomerButton/Panel/ItemGrid"]
layout_mode = 2

[node name="Checkmark1" type="TextureRect" parent="CustomerButton/Panel"]
visible = false
layout_mode = 2
offset_left = 2.0
offset_top = 2.0
offset_right = 34.0
offset_bottom = 34.0
texture = ExtResource("7_2eesi")

[node name="Checkmark2" type="TextureRect" parent="CustomerButton/Panel"]
visible = false
layout_mode = 2
offset_left = 38.0
offset_top = 2.0
offset_right = 70.0
offset_bottom = 34.0
texture = ExtResource("7_2eesi")

[node name="Checkmark3" type="TextureRect" parent="CustomerButton/Panel"]
visible = false
layout_mode = 2
offset_left = 2.0
offset_top = 38.0
offset_right = 34.0
offset_bottom = 70.0
texture = ExtResource("7_2eesi")

[node name="Checkmark4" type="TextureRect" parent="CustomerButton/Panel"]
visible = false
layout_mode = 2
offset_left = 38.0
offset_top = 38.0
offset_right = 70.0
offset_bottom = 70.0
texture = ExtResource("7_2eesi")

[node name="Label" type="Label" parent="CustomerButton/Panel"]
visible = false
layout_mode = 0
offset_left = 18.0
offset_top = 235.0
offset_right = 58.0
offset_bottom = 258.0
text = "Bye"
horizontal_alignment = 1

[node name="LeaveTimer" type="Timer" parent="CustomerButton"]
wait_time = 2.0
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(9.53674e-07, -54)
scale = Vector2(2, 2)
texture = ExtResource("4_frltw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -54)
shape = SubResource("RectangleShape2D_b204h")

[connection signal="button_up" from="CustomerButton" to="CustomerButton" method="_on_button_up"]
[connection signal="timeout" from="CustomerButton/RedPatienceTimer" to="." method="_on_red_patience_timer_timeout"]
[connection signal="timeout" from="CustomerButton/GreenPatienceTimer" to="." method="_on_green_patience_timer_timeout"]
[connection signal="timeout" from="CustomerButton/LeaveTimer" to="CustomerButton" method="_on_leave_timer_timeout"]
